# mri_qc_napari

./: LICENSE  README.md  pyproject.toml
src/mri_slice_qc/: app.py
