[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mri-slice-qc"
version = "0.1.0"
description = "Napari GUI for slice-by-slice MRI quality scoring (0-3) from HDF5 datasets."
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
  "numpy>=1.20",
  "pandas>=1.3",
  "h5py>=3.1",
  "napari[all]>=0.4.18",
  "qtpy>=2.0",
]

[project.scripts]
mri-slice-qc = "mri_slice_qc.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
